--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "editor.fontSize": 13,
-    "editor.minimap.enabled": false
+    "editor.minimap.enabled": false,
+    "editor.formatOnSave": true
 }
