--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,7 @@
         "**/bower_components": true,
         "**/*.code-search": true,
         "**/build": true
-    }
+    },
+    "javascript.format.insertSpaceAfterOpeningAndBeforeClosingJsxExpressionBraces": true,
+    "editor.lineNumbers": "relative"
 }
