--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,8 @@
 {
-    "printWidth": 80,
-    "tabWidth": 4,
-    "useTabs": false,
-    "semi": true,
-    "singleQuote": false,
-    "trailingComma": "none",
-    "bracketSpacing": true,
-    "jsxBracketSameLine": true,
-    "fluid": false,
-    "arrowParens": "always"
+	"semi": true,
+	"trailingComma": "none",
+	"printWidth": 80,
+	"endOfLine": "auto",
+	"useTabs": true,
+	"jsxBracketSameLine": true
 }
