--- a/package.json
+++ b/package.json
@@ -1,61 +1,62 @@
 {
-    "name": "BBCodeFormTool",
-    "version": "1.0.0",
-    "description": "A tool for generating BB Code forms.",
-    "keywords": [
-        "react",
-        "starter"
-    ],
-    "main": "src/index.js",
-    "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "1.2.28",
-        "@fortawesome/free-solid-svg-icons": "5.13.0",
-        "@fortawesome/react-fontawesome": "0.1.10",
-        "@types/bootstrap": "4.5.0",
-        "@types/jest": "26.0.0",
-        "@types/jquery": "3.3.38",
-        "@types/local-storage": "1.4.0",
-        "@types/node": "14.0.13",
-        "@types/react": "16.9.36",
-        "@types/react-bootstrap": "1.0.1",
-        "@types/react-copy-to-clipboard": "4.3.0",
-        "@types/react-dom": "16.9.8",
-        "@types/react-router-bootstrap": "0.24.5",
-        "@types/react-router-dom": "5.1.5",
-        "array-move": "2.2.2",
-        "bootstrap": "4.5.0",
-        "jquery": "3.5.1",
-        "npm-check": "^5.9.2",
-        "react": "16.13.1",
-        "react-bootstrap": "1.0.1",
-        "react-copy-to-clipboard": "5.0.2",
-        "react-dom": "16.13.1",
-        "react-dropzone": "^11.0.1",
-        "react-router-bootstrap": "0.25.0",
-        "react-router-dom": "5.2.0",
-        "react-scripts": "3.4.1",
-        "react-sortable-hoc": "1.11.0",
-        "react-toastify": "6.0.5",
-        "slugify": "1.4.0",
-        "tslint-plugin-prettier": "^2.3.0",
-        "typescript": "3.9.5"
-    },
-    "devDependencies": {
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-prettier": "^3.1.4",
-        "typescript": "3.3.3"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject",
-        "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
-    },
-    "browserslist": [
-        ">0.2%",
-        "not dead",
-        "not ie <= 11",
-        "not op_mini all"
-    ]
+  "name": "BBCodeFormTool",
+  "version": "1.0.0",
+  "description": "A tool for generating BB Code forms.",
+  "keywords": [
+    "react",
+    "starter"
+  ],
+  "main": "src/index.js",
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "1.2.28",
+    "@fortawesome/free-solid-svg-icons": "5.13.0",
+    "@fortawesome/react-fontawesome": "0.1.10",
+    "@types/bootstrap": "4.5.0",
+    "@types/jest": "26.0.0",
+    "@types/jquery": "3.3.38",
+    "@types/local-storage": "1.4.0",
+    "@types/node": "14.0.13",
+    "@types/react": "16.9.36",
+    "@types/react-bootstrap": "1.0.1",
+    "@types/react-copy-to-clipboard": "4.3.0",
+    "@types/react-dom": "16.9.8",
+    "@types/react-router-bootstrap": "0.24.5",
+    "@types/react-router-dom": "5.1.5",
+    "array-move": "2.2.2",
+    "bootstrap": "4.5.0",
+    "jquery": "3.5.1",
+    "npm-check": "^5.9.2",
+    "react": "16.13.1",
+    "react-bootstrap": "1.0.1",
+    "react-copy-to-clipboard": "5.0.2",
+    "react-dom": "16.13.1",
+    "react-dropzone": "^11.0.1",
+    "react-router-bootstrap": "0.25.0",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "3.4.1",
+    "react-sortable-hoc": "1.11.0",
+    "react-toastify": "6.0.5",
+    "slugify": "1.4.0",
+    "typescript": "3.9.5"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
+    "prettier": "^2.0.5",
+    "typescript": "3.3.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "lint": "eslint . --ext .ts",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
