--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "react-sortable-hoc": "1.11.0",
+    "react-textarea-autosize": "^8.2.0",
     "react-toastify": "6.0.5",
     "slugify": "1.4.0",
     "typescript": "3.9.5"
