Minor UX improvements and added support for absolute path directory referencing for imports.

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
 	"root": true,
 	"parser": "@typescript-eslint/parser",
-	"plugins": ["@typescript-eslint", "prettier"],
+	"plugins": ["@typescript-eslint"],
 	"extends": [
 		"eslint:recommended",
 		"plugin:@typescript-eslint/eslint-recommended",
@@ -10,6 +10,7 @@
 	],
 	"rules": {
 		"no-console": 1,
-		"prettier/prettier": 2
+		"prettier/prettier": 2,
+		"import/no-unresolved": "error"
 	}
 }
