--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
 		"isolatedModules": true,
 		"noEmit": true,
 		"jsx": "react",
-		"downlevelIteration": true
+		"downlevelIteration": true,
+		"baseUrl": "src"
 	},
 	"include": ["src"]
 }
