--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,16 @@
 {
-    "editor.fontSize": 13,
-    "editor.minimap.enabled": false,
-    "editor.formatOnSave": true,
-    "search.exclude": {
-        "**/node_modules": true,
-        "**/bower_components": true,
-        "**/*.code-search": true,
-        "**/build": true
-    },
-    "javascript.format.insertSpaceAfterOpeningAndBeforeClosingJsxExpressionBraces": true,
-    "editor.lineNumbers": "relative"
+	"editor.fontSize": 13,
+	"editor.minimap.enabled": false,
+	"editor.formatOnSave": true,
+	"search.exclude": {
+		"**/node_modules": true,
+		"**/bower_components": true,
+		"**/*.code-search": true,
+		"**/build": true,
+		"**/*package.json": true,
+		"**/*package-lock.json": true,
+		"**/.eslintrc*": true
+	},
+	"javascript.format.insertSpaceAfterOpeningAndBeforeClosingJsxExpressionBraces": true,
+	"editor.lineNumbers": "relative"
 }
