--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"react-copy-to-clipboard": "5.0.2",
 		"react-dom": "16.13.1",
 		"react-dropzone": "^11.0.1",
+		"react-firebase-hooks": "^2.2.0",
 		"react-live-clock": "^4.0.5",
 		"react-router-bootstrap": "0.25.0",
 		"react-router-dom": "5.2.0",
