--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"@types/react-copy-to-clipboard": "4.3.0",
 		"@types/react-dom": "16.9.8",
 		"@types/react-router-bootstrap": "0.24.5",
-		"@types/react-router-dom": "5.1.5",
+		"@types/react-router-dom": "^5.1.5",
 		"array-move": "2.2.2",
 		"bootstrap": "4.5.0",
 		"firebase": "^7.16.1",
