--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@types/react": "16.9.36",
 		"@types/react-bootstrap": "1.0.1",
 		"@types/react-copy-to-clipboard": "4.3.0",
+		"@types/react-datepicker": "^3.1.1",
 		"@types/react-dom": "16.9.8",
 		"@types/react-router-bootstrap": "0.24.5",
 		"@types/react-router-dom": "^5.1.5",
@@ -31,6 +32,7 @@
 		"react": "16.13.1",
 		"react-bootstrap": "1.0.1",
 		"react-copy-to-clipboard": "5.0.2",
+		"react-datepicker": "^3.1.3",
 		"react-dom": "16.13.1",
 		"react-firebase-hooks": "^2.2.0",
 		"react-router-bootstrap": "0.25.0",
