--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
 	],
 	"main": "src/index.js",
 	"dependencies": {
-		"@fortawesome/fontawesome-svg-core": "1.2.28",
-		"@fortawesome/free-solid-svg-icons": "5.13.0",
-		"@fortawesome/react-fontawesome": "0.1.10",
+		"@fortawesome/fontawesome-svg-core": "^1.2.32",
+		"@fortawesome/free-regular-svg-icons": "^5.15.1",
+		"@fortawesome/free-solid-svg-icons": "^5.15.1",
+		"@fortawesome/react-fontawesome": "^0.1.11",
 		"@types/bootstrap": "4.5.0",
 		"@types/jest": "26.0.0",
 		"@types/jquery": "3.3.38",
