--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
 		"typescript": "3.9.5"
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^3.4.0",
-		"@typescript-eslint/parser": "^3.6.1",
+		"@typescript-eslint/eslint-plugin": "@2.34.0",
+		"@typescript-eslint/parser": "^2.34.0",
 		"prettier": "^2.0.5",
 		"typescript": "3.3.3"
 	},
