--- a/package.json
+++ b/package.json
@@ -38,26 +38,31 @@
 		"react-firebase-hooks": "^2.2.0",
 		"react-router-bootstrap": "0.25.0",
 		"react-router-dom": "5.2.0",
-		"react-scripts": "3.4.1",
+		"react-scripts": "^4.0.0",
 		"react-sortable-hoc": "1.11.0",
 		"react-textarea-autosize": "^8.2.0",
 		"react-toastify": "6.0.5",
 		"slugify": "1.4.0",
-		"typescript": "3.9.5"
+		"typescript": "^4.0.5"
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "@2.34.0",
-		"@typescript-eslint/parser": "^2.34.0",
-		"prettier": "^2.0.5",
-		"typescript": "3.3.3"
+		"@typescript-eslint/eslint-plugin": "^4.6.0",
+		"@typescript-eslint/parser": "^4.6.0",
+		"eslint": "^7.12.1",
+		"eslint-config-prettier": "^6.15.0",
+		"eslint-import-resolver-typescript": "^2.3.0",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-prettier": "^3.1.4",
+		"eslint-plugin-react": "^7.21.5",
+		"prettier": "^2.1.2",
+		"prettier-eslint": "^11.0.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test --env=jsdom",
 		"eject": "react-scripts eject",
-		"lint": "eslint . --ext .ts",
-		"prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
+		"lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
 	},
 	"browserslist": [
 		">0.2%",
