--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@types/jest": "26.0.0",
 		"@types/jquery": "3.3.38",
 		"@types/local-storage": "1.4.0",
+		"@types/lodash": "^4.14.165",
 		"@types/node": "14.0.13",
 		"@types/react": "16.9.36",
 		"@types/react-bootstrap": "1.0.1",
@@ -29,6 +30,7 @@
 		"firebase": "^7.16.1",
 		"fuse.js": "^6.4.1",
 		"jquery": "3.5.1",
+		"lodash": "^4.17.20",
 		"npm-check": "^5.9.2",
 		"react": "16.13.1",
 		"react-bootstrap": "1.0.1",
